# packages/api-schema/src/openAPI/paths.ts
@@ -2,3 +2,4 @@ import { type paths } from './schema'
 
 export const LOGIN_PATH = '/auth/login' satisfies keyof paths
 export const SIGNUP_PATH = '/auth/signup' satisfies keyof paths
+export const LOGOUT_PATH = '/auth/logout' satisfies keyof paths
